syntax = "proto3";
package video.pb;
option go_package="video/api/pb;proto";
import "google/protobuf/empty.proto";
import "category.proto";
import "region.proto";
import "page.proto";
import "user.proto";

message VideoResponse {
  int64 id = 1;
  UserResponse user = 2;
  RegionResponse region = 3;
  CategoryResponse category = 4;
  string name = 5;
  string introduction = 6;
  string icon = 7;
  string horizontal_icon = 8;
  float score = 9;
  int64 count = 10;
  int64 total_count = 11;
  int64 favorite_count = 12;
  int64 like_count = 13;
  int64 play_count = 14;
  int64 barrage_count = 15;
  bool is_recommend = 16;
  bool is_hot = 17;
  bool is_end = 18;
  int64 created_at = 19;
  int64 updated_at = 20;
}

message UpdateVideoRequest{
  int64 id = 1;
  int64 userId = 2;
  int64 regionId = 3;
  int64 categoryId = 4;
  string name = 5;
  string introduction = 6;
  string icon = 7;
  string horizontalIcon = 8;
  float score = 9;
  int64 count = 10;
  int64 totalCount = 11;
  int64 favoriteCount = 12;
  int64 likeCount = 13;
  int64 playCount = 14;
  int64 barrageCount = 15;
  bool isRecommend = 16;
  bool isHot = 17;
  bool isEnd = 18;
  bool isVisible = 19;
}

message SearchVideoRequest{
  repeated int64 id = 1;
  int64 userId = 2;
  int64 regionId = 3;
  int64 categoryId = 4;
  string keyword = 5;
  string sort = 6;
  bool isRecommend = 7;
  bool isNew = 8;
  bool isHot = 9;
  bool isEnd = 10;
  bool isVisible = 11;
  int64 totalCountMin = 12;
  int64 totalCountMax = 13;
  int64 favoriteCountMin = 14;
  int64 favoriteCountMax = 15;
  int64 likeCountMin = 16;
  int64 likeCountMax = 17;
  int64 playCountMin = 18;
  int64 playCountMax = 19;
  int64 barrageCountMin = 20;
  int64 barrageCountMax = 21;
  int64 page = 22;
  int64 perPage = 23;
}

message GetVideoRequest{
  int64 id = 1;
  SearchVideoRequest search = 2;
  PageRequest page = 3;
}

message VideosResponse{
  int64 total = 1;
  repeated VideoResponse videos = 2;
}

service Video{
  rpc Create (UpdateVideoRequest) returns (VideoResponse); // 创建视频
  rpc Update (UpdateVideoRequest) returns (google.protobuf.Empty); // 更新视频
  rpc Delete (UpdateVideoRequest) returns (google.protobuf.Empty); // 删除视频
  rpc Get(SearchVideoRequest) returns (VideosResponse); // 视频列表
  rpc GetDetail(GetVideoRequest) returns (VideoResponse); // 视频详情
}